right aligning delete button

--- a/www/style.css
+++ b/www/style.css
@@ -14,10 +14,6 @@ body {
 .hide {
   opacity: .2;
 }
-table {
-    table-layout: fixed;
-    width: 100%;
-}
-td {
-    word-wrap: break-word;
+.action {
+  text-align: right;
 }
